# KasperskiyTestTasks1

./: README.md
input_data/: generator.py
input_data/test_directory1/: clear1.txt  malware_js1.txt  malware_macos1.txt  malware_unix1.txt
src/: CMakeLists.txt  MalwareParser.cpp  MalwareParser.h  MalwareScanner.cpp  MalwareScanner.h  ScanResult.cpp  ScanResult.h  main.cpp  mainServiceApp.cpp  mainUtilApp.cpp
src/Data/: IPCMessageScanRequest.h  IPCMessageScanResult.h  MalwareLineDatabase.cpp  MalwareLineDatabase.h  ParseFileResult.h  ScanResult.cpp  ScanResult.h
src/Utils/: ChronoUtils.h
